Initiated fullfilment choreography